--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "dva": "^2.6.0-beta.6",
-    "antd": "^3.19.5",
+    "dva": "^2.4.1",
+    "antd": "^3.26.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "moment": "^2.24.0",
@@ -28,8 +28,8 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
     "react-test-renderer": "^16.7.0",
-    "umi": "^2.7.7",
-    "umi-plugin-react": "^1.8.4"
+    "umi": "^2.12.8",
+    "umi-plugin-react": "^1.14.11"
   },
   "lint-staged": {
     "*.{js,jsx}": ["eslint --fix", "git add"]
