--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "moment": "^2.24.0",
     "xirr": "^1.0.3",
     "numeral": "^2.0.6",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "three": "^0.115.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
