--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "xirr": "^1.0.3",
     "numeral": "^2.0.6",
     "lodash": "^4.17.15",
-    "three": "^0.115.0"
+    "three": "^0.115.0",
+    "umi-request": "^1.2.19"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
