--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "umi-plugin-react": "^1.14.11"
   },
   "lint-staged": {
-    "*.{js,jsx}": ["eslint --fix", "git add"]
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "engines": {
     "node": ">=8.0.0"
