--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
   },
   "dependencies": {
     "dva": "^2.4.1",
-    "antd": "^3.26.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "moment": "^2.24.0",
-    "xirr": "^1.0.3",
+    "antd": "^4.15.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "moment": "^2.29.1",
+    "xirr": "^1.1.0",
     "numeral": "^2.0.6",
-    "lodash": "^4.17.15",
-    "three": "^0.115.0",
-    "umi-request": "^1.2.19"
+    "lodash": "^4.17.21",
+    "three": "^0.128.0",
+    "umi-request": "^1.3.5"
   },
   "devDependencies": {
-    "babel-eslint": "^9.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-umi": "^1.4.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.14.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.26.0",
+    "eslint-config-umi": "^1.6.0",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.2",
-    "react-test-renderer": "^16.7.0",
-    "umi": "^2.12.8",
-    "umi-plugin-react": "^1.14.11"
+    "eslint-plugin-react": "^7.23.2",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "react-test-renderer": "^17.0.2",
+    "umi": "^3.4.21",
+    "@umijs/preset-react": "^1.8.8"
   },
   "lint-staged": {
     "*.{js,jsx}": [
